# keysoft-sample-project

./: README.md  TASKS.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: review.yml
src/orders/: __init__.py  api.py  models.py  service.py  store.py
tests/: test_service.py
