[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "keysoft-sample-project"
version = "0.1.0"
description = "Sample Python order service for the Keysoft CCAR-F Week 3 exercises."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

# Tell setuptools the packages live under src/ (so `pip install -e .` works).
[tool.setuptools.packages.find]
where = ["src"]

# Belt-and-suspenders: even without the editable install, pytest finds src/.
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
